parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    Letrero

Grammar

Rule 0     S' -> programa
Rule 1     programa -> Programa Identificador goto PuntoComa programaGlobal Principal popGoto ParentecisIzq ParentecisDer BraquetIzq estatutoVoid BraquetDer addEndProgram llamarMaquinaVirtual
Rule 2     llamarMaquinaVirtual -> <empty>
Rule 3     programaGlobal -> variables definirFuncion addEndFunc programaGlobal
Rule 4     programaGlobal -> variables
Rule 5     programaGlobal -> definirFuncion addEndFunc programaGlobal
Rule 6     programaGlobal -> <empty>
Rule 7     variables -> Var definirTipoVariable
Rule 8     definirTipoVariable -> Tipo definirVariable PuntoComa
Rule 9     definirTipoVariable -> Tipo definirVariable PuntoComa definirTipoVariable
Rule 10    definirVariable -> tipoIdentificadorDeclaracion defineTipo
Rule 11    definirVariable -> tipoIdentificadorDeclaracion Coma defineTipo definirVariable
Rule 12    tipoIdentificadorDeclaracion -> Identificador
Rule 13    tipoIdentificadorDeclaracion -> arrayDeclaracion
Rule 14    arrayDeclaracion -> Identificador CorcheteIzq ConstanteInt validarInt CorcheteDer
Rule 15    tipoIdentificador -> Identificador validarIdentificador
Rule 16    tipoIdentificador -> array
Rule 17    validarIdentificador -> <empty>
Rule 18    array -> Identificador CorcheteIzq addLista asignarValor cerrarListaArray verArray CorcheteDer
Rule 19    cerrarListaArray -> <empty>
Rule 20    verArray -> <empty>
Rule 21    definirFuncion -> Funcion TipoRetorno Identificador modificarFuncionActual ParentecisIzq parametrosDeclaracion ParentecisDer variablesLocales BraquetIzq estatutoVoid BraquetDer popVars
Rule 22    definirFuncion -> Funcion Tipo Identificador modificarFuncionActual ParentecisIzq parametrosDeclaracion ParentecisDer variablesLocales BraquetIzq estatuto validarRegresa BraquetDer popVars
Rule 23    validarRegresa -> <empty>
Rule 24    modificarFuncionActual -> <empty>
Rule 25    parametrosDeclaracion -> parametros
Rule 26    parametrosDeclaracion -> <empty>
Rule 27    parametros -> Tipo Identificador addVarParametro
Rule 28    parametros -> Tipo Identificador addVarParametro Coma parametros
Rule 29    addVarParametro -> <empty>
Rule 30    variablesLocales -> variables
Rule 31    variablesLocales -> <empty>
Rule 32    estatuto -> asignacion noReturn estatuto
Rule 33    estatuto -> lectura noReturn estatuto
Rule 34    estatuto -> escritura noReturn estatuto
Rule 35    estatuto -> si noReturn estatuto
Rule 36    estatuto -> mientras noReturn estatuto
Rule 37    estatuto -> desde noReturn estatuto
Rule 38    estatuto -> llamarFuncion noReturn estatuto
Rule 39    estatuto -> regresa siReturn estatuto
Rule 40    estatuto -> <empty>
Rule 41    noReturn -> <empty>
Rule 42    siReturn -> <empty>
Rule 43    estatutoVoid -> asignacion estatuto
Rule 44    estatutoVoid -> lectura estatuto
Rule 45    estatutoVoid -> escritura estatuto
Rule 46    estatutoVoid -> si estatuto
Rule 47    estatutoVoid -> mientras estatuto
Rule 48    estatutoVoid -> desde estatuto
Rule 49    estatutoVoid -> llamarFuncion estatuto
Rule 50    estatutoVoid -> <empty>
Rule 51    asignacion -> tipoIdentificador validarVariable iniciarListaDir Igual asignarValor validarDirArray PuntoComa
Rule 52    validarDirArray -> <empty>
Rule 53    iniciarListaDir -> <empty>
Rule 54    asignarValor -> exprecionArismetica valorFinal
Rule 55    asignarValor -> tipoIdentificador validarVariable
Rule 56    asignarValor -> llamarFuncionAsignacion validarLlamada
Rule 57    asignarValor -> ConstanteInt validarInt
Rule 58    asignarValor -> ConstanteFloat validarFloat
Rule 59    asignarValor -> ConstanteChar validarChar
Rule 60    validarLlamada -> <empty>
Rule 61    validarVariable -> <empty>
Rule 62    llamarFuncion -> Identificador validarFuncion ParentecisIzq parametrosLlamada goSub asignarValorFuncion ParentecisDer PuntoComa
Rule 63    llamarFuncionAsignacion -> Identificador validarFuncion ParentecisIzq parametrosLlamada goSub asignarValorFuncion ParentecisDer
Rule 64    asignarValorFuncion -> <empty>
Rule 65    goSub -> <empty>
Rule 66    validarFuncion -> <empty>
Rule 67    parametrosLlamada -> valoresLlamada
Rule 68    parametrosLlamada -> <empty>
Rule 69    valoresLlamada -> addLista asignarValor paramFuncion cerrarListaArray
Rule 70    valoresLlamada -> addLista asignarValor paramFuncion cerrarListaArray Coma valoresLlamada
Rule 71    paramFuncion -> <empty>
Rule 72    exprecionArismetica -> asignarMultDiv cuadruploSR SignoSumRest addOperador exprecionArismetica
Rule 73    exprecionArismetica -> asignarMultDiv cuadruploSR
Rule 74    asignarMultDiv -> asignarValorArismetico cuadruploMD SignoMultDiv addOperador asignarMultDiv
Rule 75    asignarMultDiv -> asignarValorArismetico cuadruploMD
Rule 76    asignarValorArismetico -> valor addListaVariables
Rule 77    asignarValorArismetico -> ParentecisIzq addLista estatuto cerrarLista ParentecisDer
Rule 78    asignarValorArismetico -> ParentecisIzq addLista exprecionArismetica cerrarLista ParentecisDer
Rule 79    valorFinal -> <empty>
Rule 80    addListaVariables -> <empty>
Rule 81    addOperador -> <empty>
Rule 82    addLista -> <empty>
Rule 83    cerrarLista -> <empty>
Rule 84    valor -> ConstanteInt validarInt
Rule 85    valor -> ConstanteFloat validarFloat
Rule 86    valor -> tipoIdentificador validarVariable
Rule 87    valor -> llamarFuncionAsignacion validarLlamada
Rule 88    lectura -> Lee ParentecisIzq valoresLectura ParentecisDer PuntoComa
Rule 89    valoresLectura -> tipoIdentificador cuadruploLectura
Rule 90    valoresLectura -> tipoIdentificador cuadruploLectura Coma valoresLectura
Rule 91    cuadruploLectura -> <empty>
Rule 92    escritura -> Escribe ParentecisIzq definirEscritura ParentecisDer PuntoComa
Rule 93    definirEscritura -> asignarValorEscritura cuadruploEscritura
Rule 94    definirEscritura -> asignarValorEscritura cuadruploEscritura Coma definirEscritura
Rule 95    asignarValorEscritura -> exprecionArismetica valorFinal
Rule 96    asignarValorEscritura -> tipoIdentificador validarVariable
Rule 97    asignarValorEscritura -> llamarFuncionAsignacion validarLlamada
Rule 98    asignarValorEscritura -> ConstanteChar validarChar
Rule 99    cuadruploEscritura -> <empty>
Rule 100   si -> Si ParentecisIzq exprecionLogica ParentecisDer gotoF Entonces BraquetIzq estatuto BraquetDer sino
Rule 101   exprecionLogica -> asignarOperadorLogico cuadruploSignoLogico SignoLogico addOperadorLogico exprecionLogica
Rule 102   exprecionLogica -> asignarOperadorLogico cuadruploSignoLogico
Rule 103   asignarOperadorLogico -> asignarValor addVariableLogica cuadruploOperadorLogico OperadorLogico addOperadorLogico asignarOperadorLogico
Rule 104   asignarOperadorLogico -> asignarValor addVariableLogica cuadruploOperadorLogico
Rule 105   addVariableLogica -> <empty>
Rule 106   addOperadorLogico -> <empty>
Rule 107   sino -> popGotoFs Sino goto BraquetIzq estatuto BraquetDer popGoto
Rule 108   sino -> popGotoF
Rule 109   mientras -> Mientras ParentecisIzq gotoM exprecionLogica ParentecisDer gotoF Haz BraquetIzq estatuto BraquetDer popGotoFs popGotoM
Rule 110   desde -> Desde tipoIdentificador validarIdDesde Igual asignarValor asignarDesde Hasta gotoM asignarValor comparaDesde gotoF Hacer BraquetIzq estatuto BraquetDer addUnoVariable popGotoFs popGotoM
Rule 111   validarIdDesde -> <empty>
Rule 112   asignarDesde -> <empty>
Rule 113   comparaDesde -> <empty>
Rule 114   addUnoVariable -> <empty>
Rule 115   regresa -> Regresa ParentecisIzq asignarValor regresaCuadruplo ParentecisDer PuntoComa
Rule 116   regresaCuadruplo -> <empty>
Rule 117   defineTipo -> <empty>
Rule 118   popVars -> <empty>
Rule 119   addEndFunc -> <empty>
Rule 120   addEndProgram -> <empty>
Rule 121   goto -> <empty>
Rule 122   popGoto -> <empty>
Rule 123   gotoM -> <empty>
Rule 124   popGotoM -> <empty>
Rule 125   gotoF -> <empty>
Rule 126   popGotoFs -> <empty>
Rule 127   popGotoF -> <empty>
Rule 128   cuadruploMD -> <empty>
Rule 129   cuadruploSR -> <empty>
Rule 130   cuadruploSignoLogico -> <empty>
Rule 131   cuadruploOperadorLogico -> <empty>
Rule 132   validarInt -> <empty>
Rule 133   validarFloat -> <empty>
Rule 134   validarChar -> <empty>
Rule 135   debugErrors -> <empty>

Terminals, with rules where they appear

BraquetDer           : 1 21 22 100 107 109 110
BraquetIzq           : 1 21 22 100 107 109 110
Coma                 : 11 28 70 90 94
ConstanteChar        : 59 98
ConstanteFloat       : 58 85
ConstanteInt         : 14 57 84
CorcheteDer          : 14 18
CorcheteIzq          : 14 18
Desde                : 110
Entonces             : 100
Escribe              : 92
Funcion              : 21 22
Hacer                : 110
Hasta                : 110
Haz                  : 109
Identificador        : 1 12 14 15 18 21 22 27 28 62 63
Igual                : 51 110
Lee                  : 88
Letrero              : 
Mientras             : 109
OperadorLogico       : 103
ParentecisDer        : 1 21 22 62 63 77 78 88 92 100 109 115
ParentecisIzq        : 1 21 22 62 63 77 78 88 92 100 109 115
Principal            : 1
Programa             : 1
PuntoComa            : 1 8 9 51 62 88 92 115
Regresa              : 115
Si                   : 100
SignoLogico          : 101
SignoMultDiv         : 74
SignoSumRest         : 72
Sino                 : 107
Tipo                 : 8 9 22 27 28
TipoRetorno          : 21
Var                  : 7
error                : 

Nonterminals, with rules where they appear

addEndFunc           : 3 5
addEndProgram        : 1
addLista             : 18 69 70 77 78
addListaVariables    : 76
addOperador          : 72 74
addOperadorLogico    : 101 103
addUnoVariable       : 110
addVarParametro      : 27 28
addVariableLogica    : 103 104
array                : 16
arrayDeclaracion     : 13
asignacion           : 32 43
asignarDesde         : 110
asignarMultDiv       : 72 73 74
asignarOperadorLogico : 101 102 103
asignarValor         : 18 51 69 70 103 104 110 110 115
asignarValorArismetico : 74 75
asignarValorEscritura : 93 94
asignarValorFuncion  : 62 63
cerrarLista          : 77 78
cerrarListaArray     : 18 69 70
comparaDesde         : 110
cuadruploEscritura   : 93 94
cuadruploLectura     : 89 90
cuadruploMD          : 74 75
cuadruploOperadorLogico : 103 104
cuadruploSR          : 72 73
cuadruploSignoLogico : 101 102
debugErrors          : 
defineTipo           : 10 11
definirEscritura     : 92 94
definirFuncion       : 3 5
definirTipoVariable  : 7 9
definirVariable      : 8 9 11
desde                : 37 48
escritura            : 34 45
estatuto             : 22 32 33 34 35 36 37 38 39 43 44 45 46 47 48 49 77 100 107 109 110
estatutoVoid         : 1 21
exprecionArismetica  : 54 72 78 95
exprecionLogica      : 100 101 109
goSub                : 62 63
goto                 : 1 107
gotoF                : 100 109 110
gotoM                : 109 110
iniciarListaDir      : 51
lectura              : 33 44
llamarFuncion        : 38 49
llamarFuncionAsignacion : 56 87 97
llamarMaquinaVirtual : 1
mientras             : 36 47
modificarFuncionActual : 21 22
noReturn             : 32 33 34 35 36 37 38
paramFuncion         : 69 70
parametros           : 25 28
parametrosDeclaracion : 21 22
parametrosLlamada    : 62 63
popGoto              : 1 107
popGotoF             : 108
popGotoFs            : 107 109 110
popGotoM             : 109 110
popVars              : 21 22
programa             : 0
programaGlobal       : 1 3 5
regresa              : 39
regresaCuadruplo     : 115
si                   : 35 46
siReturn             : 39
sino                 : 100
tipoIdentificador    : 51 55 86 89 90 96 110
tipoIdentificadorDeclaracion : 10 11
validarChar          : 59 98
validarDirArray      : 51
validarFloat         : 58 85
validarFuncion       : 62 63
validarIdDesde       : 110
validarIdentificador : 15
validarInt           : 14 57 84
validarLlamada       : 56 87 97
validarRegresa       : 22
validarVariable      : 51 55 86 96
valor                : 76
valorFinal           : 54 95
valoresLectura       : 88 90
valoresLlamada       : 67 70
variables            : 3 4 30
variablesLocales     : 21 22
verArray             : 18

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . Programa Identificador goto PuntoComa programaGlobal Principal popGoto ParentecisIzq ParentecisDer BraquetIzq estatutoVoid BraquetDer addEndProgram llamarMaquinaVirtual

    Programa        shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> Programa . Identificador goto PuntoComa programaGlobal Principal popGoto ParentecisIzq ParentecisDer BraquetIzq estatutoVoid BraquetDer addEndProgram llamarMaquinaVirtual

    Identificador   shift and go to state 3


state 3

    (1) programa -> Programa Identificador . goto PuntoComa programaGlobal Principal popGoto ParentecisIzq ParentecisDer BraquetIzq estatutoVoid BraquetDer addEndProgram llamarMaquinaVirtual
    (121) goto -> .

    PuntoComa       reduce using rule 121 (goto -> .)

    goto                           shift and go to state 4

state 4

    (1) programa -> Programa Identificador goto . PuntoComa programaGlobal Principal popGoto ParentecisIzq ParentecisDer BraquetIzq estatutoVoid BraquetDer addEndProgram llamarMaquinaVirtual

    PuntoComa       shift and go to state 5


state 5

    (1) programa -> Programa Identificador goto PuntoComa . programaGlobal Principal popGoto ParentecisIzq ParentecisDer BraquetIzq estatutoVoid BraquetDer addEndProgram llamarMaquinaVirtual
    (3) programaGlobal -> . variables definirFuncion addEndFunc programaGlobal
    (4) programaGlobal -> . variables
    (5) programaGlobal -> . definirFuncion addEndFunc programaGlobal
    (6) programaGlobal -> .
    (7) variables -> . Var definirTipoVariable
    (21) definirFuncion -> . Funcion TipoRetorno Identificador modificarFuncionActual ParentecisIzq parametrosDeclaracion ParentecisDer variablesLocales BraquetIzq estatutoVoid BraquetDer popVars
    (22) definirFuncion -> . Funcion Tipo Identificador modificarFuncionActual ParentecisIzq parametrosDeclaracion ParentecisDer variablesLocales BraquetIzq estatuto validarRegresa BraquetDer popVars

    Principal       reduce using rule 6 (programaGlobal -> .)
    Var             shift and go to state 9
    Funcion         shift and go to state 10

    programaGlobal                 shift and go to state 6
    variables                      shift and go to state 7
    definirFuncion                 shift and go to state 8

state 6

    (1) programa -> Programa Identificador goto PuntoComa programaGlobal . Principal popGoto ParentecisIzq ParentecisDer BraquetIzq estatutoVoid BraquetDer addEndProgram llamarMaquinaVirtual

    Principal       shift and go to state 11


state 7

    (3) programaGlobal -> variables . definirFuncion addEndFunc programaGlobal
    (4) programaGlobal -> variables .
    (21) definirFuncion -> . Funcion TipoRetorno Identificador modificarFuncionActual ParentecisIzq parametrosDeclaracion ParentecisDer variablesLocales BraquetIzq estatutoVoid BraquetDer popVars
    (22) definirFuncion -> . Funcion Tipo Identificador modificarFuncionActual ParentecisIzq parametrosDeclaracion ParentecisDer variablesLocales BraquetIzq estatuto validarRegresa BraquetDer popVars

    Principal       reduce using rule 4 (programaGlobal -> variables .)
    Funcion         shift and go to state 10

    definirFuncion                 shift and go to state 12

state 8

    (5) programaGlobal -> definirFuncion . addEndFunc programaGlobal
    (119) addEndFunc -> .

    Var             reduce using rule 119 (addEndFunc -> .)
    Funcion         reduce using rule 119 (addEndFunc -> .)
    Principal       reduce using rule 119 (addEndFunc -> .)

    addEndFunc                     shift and go to state 13

state 9

    (7) variables -> Var . definirTipoVariable
    (8) definirTipoVariable -> . Tipo definirVariable PuntoComa
    (9) definirTipoVariable -> . Tipo definirVariable PuntoComa definirTipoVariable

    Tipo            shift and go to state 15

    definirTipoVariable            shift and go to state 14

state 10

    (21) definirFuncion -> Funcion . TipoRetorno Identificador modificarFuncionActual ParentecisIzq parametrosDeclaracion ParentecisDer variablesLocales BraquetIzq estatutoVoid BraquetDer popVars
    (22) definirFuncion -> Funcion . Tipo Identificador modificarFuncionActual ParentecisIzq parametrosDeclaracion ParentecisDer variablesLocales BraquetIzq estatuto validarRegresa BraquetDer popVars

    TipoRetorno     shift and go to state 16
    Tipo            shift and go to state 17


state 11

    (1) programa -> Programa Identificador goto PuntoComa programaGlobal Principal . popGoto ParentecisIzq ParentecisDer BraquetIzq estatutoVoid BraquetDer addEndProgram llamarMaquinaVirtual
    (122) popGoto -> .

    ParentecisIzq   reduce using rule 122 (popGoto -> .)

    popGoto                        shift and go to state 18

state 12

    (3) programaGlobal -> variables definirFuncion . addEndFunc programaGlobal
    (119) addEndFunc -> .

    Var             reduce using rule 119 (addEndFunc -> .)
    Funcion         reduce using rule 119 (addEndFunc -> .)
    Principal       reduce using rule 119 (addEndFunc -> .)

    addEndFunc                     shift and go to state 19

state 13

    (5) programaGlobal -> definirFuncion addEndFunc . programaGlobal
    (3) programaGlobal -> . variables definirFuncion addEndFunc programaGlobal
    (4) programaGlobal -> . variables
    (5) programaGlobal -> . definirFuncion addEndFunc programaGlobal
    (6) programaGlobal -> .
    (7) variables -> . Var definirTipoVariable
    (21) definirFuncion -> . Funcion TipoRetorno Identificador modificarFuncionActual ParentecisIzq parametrosDeclaracion ParentecisDer variablesLocales BraquetIzq estatutoVoid BraquetDer popVars
    (22) definirFuncion -> . Funcion Tipo Identificador modificarFuncionActual ParentecisIzq parametrosDeclaracion ParentecisDer variablesLocales BraquetIzq estatuto validarRegresa BraquetDer popVars

    Principal       reduce using rule 6 (programaGlobal -> .)
    Var             shift and go to state 9
    Funcion         shift and go to state 10

    definirFuncion                 shift and go to state 8
    programaGlobal                 shift and go to state 20
    variables                      shift and go to state 7

state 14

    (7) variables -> Var definirTipoVariable .

    Funcion         reduce using rule 7 (variables -> Var definirTipoVariable .)
    Principal       reduce using rule 7 (variables -> Var definirTipoVariable .)
    BraquetIzq      reduce using rule 7 (variables -> Var definirTipoVariable .)


state 15

    (8) definirTipoVariable -> Tipo . definirVariable PuntoComa
    (9) definirTipoVariable -> Tipo . definirVariable PuntoComa definirTipoVariable
    (10) definirVariable -> . tipoIdentificadorDeclaracion defineTipo
    (11) definirVariable -> . tipoIdentificadorDeclaracion Coma defineTipo definirVariable
    (12) tipoIdentificadorDeclaracion -> . Identificador
    (13) tipoIdentificadorDeclaracion -> . arrayDeclaracion
    (14) arrayDeclaracion -> . Identificador CorcheteIzq ConstanteInt validarInt CorcheteDer

    Identificador   shift and go to state 23

    definirVariable                shift and go to state 21
    tipoIdentificadorDeclaracion   shift and go to state 22
    arrayDeclaracion               shift and go to state 24

state 16

    (21) definirFuncion -> Funcion TipoRetorno . Identificador modificarFuncionActual ParentecisIzq parametrosDeclaracion ParentecisDer variablesLocales BraquetIzq estatutoVoid BraquetDer popVars

    Identificador   shift and go to state 25


state 17

    (22) definirFuncion -> Funcion Tipo . Identificador modificarFuncionActual ParentecisIzq parametrosDeclaracion ParentecisDer variablesLocales BraquetIzq estatuto validarRegresa BraquetDer popVars

    Identificador   shift and go to state 26


state 18

    (1) programa -> Programa Identificador goto PuntoComa programaGlobal Principal popGoto . ParentecisIzq ParentecisDer BraquetIzq estatutoVoid BraquetDer addEndProgram llamarMaquinaVirtual

    ParentecisIzq   shift and go to state 27


state 19

    (3) programaGlobal -> variables definirFuncion addEndFunc . programaGlobal
    (3) programaGlobal -> . variables definirFuncion addEndFunc programaGlobal
    (4) programaGlobal -> . variables
    (5) programaGlobal -> . definirFuncion addEndFunc programaGlobal
    (6) programaGlobal -> .
    (7) variables -> . Var definirTipoVariable
    (21) definirFuncion -> . Funcion TipoRetorno Identificador modificarFuncionActual ParentecisIzq parametrosDeclaracion ParentecisDer variablesLocales BraquetIzq estatutoVoid BraquetDer popVars
    (22) definirFuncion -> . Funcion Tipo Identificador modificarFuncionActual ParentecisIzq parametrosDeclaracion ParentecisDer variablesLocales BraquetIzq estatuto validarRegresa BraquetDer popVars

    Principal       reduce using rule 6 (programaGlobal -> .)
    Var             shift and go to state 9
    Funcion         shift and go to state 10

    variables                      shift and go to state 7
    definirFuncion                 shift and go to state 8
    programaGlobal                 shift and go to state 28

state 20

    (5) programaGlobal -> definirFuncion addEndFunc programaGlobal .

    Principal       reduce using rule 5 (programaGlobal -> definirFuncion addEndFunc programaGlobal .)


state 21

    (8) definirTipoVariable -> Tipo definirVariable . PuntoComa
    (9) definirTipoVariable -> Tipo definirVariable . PuntoComa definirTipoVariable

    PuntoComa       shift and go to state 29


state 22

    (10) definirVariable -> tipoIdentificadorDeclaracion . defineTipo
    (11) definirVariable -> tipoIdentificadorDeclaracion . Coma defineTipo definirVariable
    (117) defineTipo -> .

    Coma            shift and go to state 31
    PuntoComa       reduce using rule 117 (defineTipo -> .)

    defineTipo                     shift and go to state 30

state 23

    (12) tipoIdentificadorDeclaracion -> Identificador .
    (14) arrayDeclaracion -> Identificador . CorcheteIzq ConstanteInt validarInt CorcheteDer

    Coma            reduce using rule 12 (tipoIdentificadorDeclaracion -> Identificador .)
    PuntoComa       reduce using rule 12 (tipoIdentificadorDeclaracion -> Identificador .)
    CorcheteIzq     shift and go to state 32


state 24

    (13) tipoIdentificadorDeclaracion -> arrayDeclaracion .

    Coma            reduce using rule 13 (tipoIdentificadorDeclaracion -> arrayDeclaracion .)
    PuntoComa       reduce using rule 13 (tipoIdentificadorDeclaracion -> arrayDeclaracion .)


state 25

    (21) definirFuncion -> Funcion TipoRetorno Identificador . modificarFuncionActual ParentecisIzq parametrosDeclaracion ParentecisDer variablesLocales BraquetIzq estatutoVoid BraquetDer popVars
    (24) modificarFuncionActual -> .

    ParentecisIzq   reduce using rule 24 (modificarFuncionActual -> .)

    modificarFuncionActual         shift and go to state 33

state 26

    (22) definirFuncion -> Funcion Tipo Identificador . modificarFuncionActual ParentecisIzq parametrosDeclaracion ParentecisDer variablesLocales BraquetIzq estatuto validarRegresa BraquetDer popVars
    (24) modificarFuncionActual -> .

    ParentecisIzq   reduce using rule 24 (modificarFuncionActual -> .)

    modificarFuncionActual         shift and go to state 34

state 27

    (1) programa -> Programa Identificador goto PuntoComa programaGlobal Principal popGoto ParentecisIzq . ParentecisDer BraquetIzq estatutoVoid BraquetDer addEndProgram llamarMaquinaVirtual

    ParentecisDer   shift and go to state 35


state 28

    (3) programaGlobal -> variables definirFuncion addEndFunc programaGlobal .

    Principal       reduce using rule 3 (programaGlobal -> variables definirFuncion addEndFunc programaGlobal .)


state 29

    (8) definirTipoVariable -> Tipo definirVariable PuntoComa .
    (9) definirTipoVariable -> Tipo definirVariable PuntoComa . definirTipoVariable
    (8) definirTipoVariable -> . Tipo definirVariable PuntoComa
    (9) definirTipoVariable -> . Tipo definirVariable PuntoComa definirTipoVariable

    Funcion         reduce using rule 8 (definirTipoVariable -> Tipo definirVariable PuntoComa .)
    Principal       reduce using rule 8 (definirTipoVariable -> Tipo definirVariable PuntoComa .)
    BraquetIzq      reduce using rule 8 (definirTipoVariable -> Tipo definirVariable PuntoComa .)
    Tipo            shift and go to state 15

    definirTipoVariable            shift and go to state 36

state 30

    (10) definirVariable -> tipoIdentificadorDeclaracion defineTipo .

    PuntoComa       reduce using rule 10 (definirVariable -> tipoIdentificadorDeclaracion defineTipo .)


state 31

    (11) definirVariable -> tipoIdentificadorDeclaracion Coma . defineTipo definirVariable
    (117) defineTipo -> .

    Identificador   reduce using rule 117 (defineTipo -> .)

    defineTipo                     shift and go to state 37

state 32

    (14) arrayDeclaracion -> Identificador CorcheteIzq . ConstanteInt validarInt CorcheteDer

    ConstanteInt    shift and go to state 38


state 33

    (21) definirFuncion -> Funcion TipoRetorno Identificador modificarFuncionActual . ParentecisIzq parametrosDeclaracion ParentecisDer variablesLocales BraquetIzq estatutoVoid BraquetDer popVars

    ParentecisIzq   shift and go to state 39


state 34

    (22) definirFuncion -> Funcion Tipo Identificador modificarFuncionActual . ParentecisIzq parametrosDeclaracion ParentecisDer variablesLocales BraquetIzq estatuto validarRegresa BraquetDer popVars

    ParentecisIzq   shift and go to state 40


state 35

    (1) programa -> Programa Identificador goto PuntoComa programaGlobal Principal popGoto ParentecisIzq ParentecisDer . BraquetIzq estatutoVoid BraquetDer addEndProgram llamarMaquinaVirtual

    BraquetIzq      shift and go to state 41


state 36

    (9) definirTipoVariable -> Tipo definirVariable PuntoComa definirTipoVariable .

    Funcion         reduce using rule 9 (definirTipoVariable -> Tipo definirVariable PuntoComa definirTipoVariable .)
    Principal       reduce using rule 9 (definirTipoVariable -> Tipo definirVariable PuntoComa definirTipoVariable .)
    BraquetIzq      reduce using rule 9 (definirTipoVariable -> Tipo definirVariable PuntoComa definirTipoVariable .)


state 37

    (11) definirVariable -> tipoIdentificadorDeclaracion Coma defineTipo . definirVariable
    (10) definirVariable -> . tipoIdentificadorDeclaracion defineTipo
    (11) definirVariable -> . tipoIdentificadorDeclaracion Coma defineTipo definirVariable
    (12) tipoIdentificadorDeclaracion -> . Identificador
    (13) tipoIdentificadorDeclaracion -> . arrayDeclaracion
    (14) arrayDeclaracion -> . Identificador CorcheteIzq ConstanteInt validarInt CorcheteDer

    Identificador   shift and go to state 23

    tipoIdentificadorDeclaracion   shift and go to state 22
    definirVariable                shift and go to state 42
    arrayDeclaracion               shift and go to state 24

state 38

    (14) arrayDeclaracion -> Identificador CorcheteIzq ConstanteInt . validarInt CorcheteDer
    (132) validarInt -> .

    CorcheteDer     reduce using rule 132 (validarInt -> .)

    validarInt                     shift and go to state 43

state 39

    (21) definirFuncion -> Funcion TipoRetorno Identificador modificarFuncionActual ParentecisIzq . parametrosDeclaracion ParentecisDer variablesLocales BraquetIzq estatutoVoid BraquetDer popVars
    (25) parametrosDeclaracion -> . parametros
    (26) parametrosDeclaracion -> .
    (27) parametros -> . Tipo Identificador addVarParametro
    (28) parametros -> . Tipo Identificador addVarParametro Coma parametros

    ParentecisDer   reduce using rule 26 (parametrosDeclaracion -> .)
    Tipo            shift and go to state 46

    parametrosDeclaracion          shift and go to state 44
    parametros                     shift and go to state 45

state 40

    (22) definirFuncion -> Funcion Tipo Identificador modificarFuncionActual ParentecisIzq . parametrosDeclaracion ParentecisDer variablesLocales BraquetIzq estatuto validarRegresa BraquetDer popVars
    (25) parametrosDeclaracion -> . parametros
    (26) parametrosDeclaracion -> .
    (27) parametros -> . Tipo Identificador addVarParametro
    (28) parametros -> . Tipo Identificador addVarParametro Coma parametros

    ParentecisDer   reduce using rule 26 (parametrosDeclaracion -> .)
    Tipo            shift and go to state 46

    parametrosDeclaracion          shift and go to state 47
    parametros                     shift and go to state 45

state 41

    (1) programa -> Programa Identificador goto PuntoComa programaGlobal Principal popGoto ParentecisIzq ParentecisDer BraquetIzq . estatutoVoid BraquetDer addEndProgram llamarMaquinaVirtual
    (43) estatutoVoid -> . asignacion estatuto
    (44) estatutoVoid -> . lectura estatuto
    (45) estatutoVoid -> . escritura estatuto
    (46) estatutoVoid -> . si estatuto
    (47) estatutoVoid -> . mientras estatuto
    (48) estatutoVoid -> . desde estatuto
    (49) estatutoVoid -> . llamarFuncion estatuto
    (50) estatutoVoid -> .
    (51) asignacion -> . tipoIdentificador validarVariable iniciarListaDir Igual asignarValor validarDirArray PuntoComa
    (88) lectura -> . Lee ParentecisIzq valoresLectura ParentecisDer PuntoComa
    (92) escritura -> . Escribe ParentecisIzq definirEscritura ParentecisDer PuntoComa
    (100) si -> . Si ParentecisIzq exprecionLogica ParentecisDer gotoF Entonces BraquetIzq estatuto BraquetDer sino
    (109) mientras -> . Mientras ParentecisIzq gotoM exprecionLogica ParentecisDer gotoF Haz BraquetIzq estatuto BraquetDer popGotoFs popGotoM
    (110) desde -> . Desde tipoIdentificador validarIdDesde Igual asignarValor asignarDesde Hasta gotoM asignarValor comparaDesde gotoF Hacer BraquetIzq estatuto BraquetDer addUnoVariable popGotoFs popGotoM
    (62) llamarFuncion -> . Identificador validarFuncion ParentecisIzq parametrosLlamada goSub asignarValorFuncion ParentecisDer PuntoComa
    (15) tipoIdentificador -> . Identificador validarIdentificador
    (16) tipoIdentificador -> . array
    (18) array -> . Identificador CorcheteIzq addLista asignarValor cerrarListaArray verArray CorcheteDer

    BraquetDer      reduce using rule 50 (estatutoVoid -> .)
    Lee             shift and go to state 58
    Escribe         shift and go to state 59
    Si              shift and go to state 60
    Mientras        shift and go to state 61
    Desde           shift and go to state 62
    Identificador   shift and go to state 48

    estatutoVoid                   shift and go to state 49
    asignacion                     shift and go to state 50
    lectura                        shift and go to state 51
    escritura                      shift and go to state 52
    si                             shift and go to state 53
    mientras                       shift and go to state 54
    desde                          shift and go to state 55
    llamarFuncion                  shift and go to state 56
    tipoIdentificador              shift and go to state 57
    array                          shift and go to state 63

state 42

    (11) definirVariable -> tipoIdentificadorDeclaracion Coma defineTipo definirVariable .

    PuntoComa       reduce using rule 11 (definirVariable -> tipoIdentificadorDeclaracion Coma defineTipo definirVariable .)


state 43

    (14) arrayDeclaracion -> Identificador CorcheteIzq ConstanteInt validarInt . CorcheteDer

    CorcheteDer     shift and go to state 64


state 44

    (21) definirFuncion -> Funcion TipoRetorno Identificador modificarFuncionActual ParentecisIzq parametrosDeclaracion . ParentecisDer variablesLocales BraquetIzq estatutoVoid BraquetDer popVars

    ParentecisDer   shift and go to state 65


state 45

    (25) parametrosDeclaracion -> parametros .

    ParentecisDer   reduce using rule 25 (parametrosDeclaracion -> parametros .)


state 46

    (27) parametros -> Tipo . Identificador addVarParametro
    (28) parametros -> Tipo . Identificador addVarParametro Coma parametros

    Identificador   shift and go to state 66


state 47

    (22) definirFuncion -> Funcion Tipo Identificador modificarFuncionActual ParentecisIzq parametrosDeclaracion . ParentecisDer variablesLocales BraquetIzq estatuto validarRegresa BraquetDer popVars

    ParentecisDer   shift and go to state 67


state 48

    (62) llamarFuncion -> Identificador . validarFuncion ParentecisIzq parametrosLlamada goSub asignarValorFuncion ParentecisDer PuntoComa
    (15) tipoIdentificador -> Identificador . validarIdentificador
    (18) array -> Identificador . CorcheteIzq addLista asignarValor cerrarListaArray verArray CorcheteDer
    (66) validarFuncion -> .
    (17) validarIdentificador -> .

    CorcheteIzq     shift and go to state 70
    ParentecisIzq   reduce using rule 66 (validarFuncion -> .)
    Igual           reduce using rule 17 (validarIdentificador -> .)

    validarFuncion                 shift and go to state 68
    validarIdentificador           shift and go to state 69

state 49

    (1) programa -> Programa Identificador goto PuntoComa programaGlobal Principal popGoto ParentecisIzq ParentecisDer BraquetIzq estatutoVoid . BraquetDer addEndProgram llamarMaquinaVirtual

    BraquetDer      shift and go to state 71


state 50
